--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.9.0",
+    "next": "^14.2.13",
     "react": "18",
-    "react-dom": "18",
-    "next": "14.1.0"
+    "react-dom": "18"
   },
   "devDependencies": {
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.8",
     "autoprefixer": "10.0.1",
-    "postcss": "8",
-    "tailwindcss": "3.3.0",
     "eslint": "8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "8",
+    "tailwindcss": "3.3.0"
   }
 }
